Mejora Header y Footer

--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer py-3 bg-light border-top">
+  <div class="container">
+    <p class="text-center text-muted mb-0">© 2024 Examen Neoris</p>
+  </div>
+</footer>
