--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header>
+  <nav class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container justify-content-center">
+      <span class="navbar-brand mb-0 h1">Header</span>
+    </div>
+  </nav>
+</header>
